# USB-camera

./: README.md
Client/: CMakeLists.txt  README.md
Client/include/: Socket.h
Client/src/: main.cpp
JayPilon-g3-vlsi407-odroid-f781145f3f81/: Doxyfile  odroid-deploy-gdb.sh
JayPilon-g3-vlsi407-odroid-f781145f3f81/include/: OdroidState.h
JayPilon-g3-vlsi407-odroid-f781145f3f81/src/: QRProcessing.cpp
JayPilon-g3-vlsi407-poste-e814235e66d7/: Doxyfile
JayPilon-g3-vlsi407-poste-e814235e66d7/include/: ImageReception.h  traitementQR.h
JayPilon-g3-vlsi407-poste-e814235e66d7/src/: ImageReception.cpp  Socket.cpp  traitementQR.cpp
Odroid C2/: CMakeLists.txt  README.md
Odroid C2/include/: Capture.h  QRProcessing.h  ServerSide.h
Odroid C2/src/: Capture.cpp  OdroidState.cpp  ServerSide.cpp  main.cpp
